# Zmart-BMADFULL

./: .gitignore  ANALYTICS_FINAL_GUIDE.md  Anchor.toml  BMM-INITIALIZATION-COMPLETE.md  BMM-USAGE-GUIDE.md  CLAUDE.md  Cargo.toml  DAILY_BMAD_CHECKLIST.md  FRESH_START_GUIDE.md  MARKET_CREATION_IMPLEMENTATION.md  MARKET_RESOLUTION_IMPLEMENTATION.md  README.md  THOROUGH_CLEANUP_PLAN.md  USER_ANALYTICS_DASHBOARD.md  fix-schema.sql  package-lock.json  package.json  vercel.json
.bmad-core/: install-manifest.yaml
.claude/: CLAUDE.md  bmad-session-init.md
database/: README.md
docs/: BEAUTIFUL-UI-COMPLETE.md  BETTING-FIX-V2.md  BMAD-BULLETPROOF-SYSTEM.md  COMPLETE-SETUP-GUIDE.md  DEVELOPMENT-WORKFLOW.md  DEVNET-ADDRESSES.md  DEVNET-TESTING-GUIDE.md  FINAL-FIX-COMPLETE.md  LOCAL-TESTING-RESULTS.md  MANUAL-DIAGNOSTIC.md  NEXT-FEATURES-PLAN.md  PHASE1-COMPLETE.md  PLAYWRIGHT-DEPLOYMENT-ANALYSIS.md  PROPOSAL-SUBMISSION-FIXED.md  PROPOSAL-SUBMISSION-WORKING.md  PROPOSAL-SYSTEM-INTEGRATION-COMPLETE.md  READY-TO-TEST.md  STORY-1.1-COMPLETE.md  STORY-1.11-COMPLETE.md  STORY-1.12-COMPLETE.md  STORY-1.5-COMPLETE.md  STORY-1.7-COMPLETE.md  STORY-1.9-COMPLETE.md  STORY-2.11-COMPLETE.md  STORY-2.12-COMPLETE.md  STORY-2.4-COMPLETE.md  STORY-2.5-COMPLETE.md  STORY-2.6-COMPLETE.md  STORY-2.8-COMPLETE.md  STORY-3.2-COMPLETE.md  STORY-3.3-COMPLETE.md  STORY-3.4-COMPLETE.md  SYNC-SETUP.md  SYSTEMATIC-TESTING-CHECKLIST.md  TESTING-WORKFLOW.md  TESTNET-DEPLOYMENT-CHECKLIST.md  VERCEL-DEPLOYMENT.md  VERIFICATION-TEST-PLAN.md  VOTING-QUICK-START.md  WEB3-FEATURES-IMPLEMENTED.md  (+16 more)
frontend/: .env.example  .gitignore  .npmrc  DEPLOYMENT.md  README-frontend.md  SECURITY-RECOMMENDATIONS.md  TESTING.md  add-test-markets.sh  add-vercel-env.sh  check-bets-schema.sh  check-db-tables.sh  check-fk-constraint.md  check-market-ids.sh  deploy-preview.sh  disable-production.sh  final-verification.sh  fix-comments-fk.sql  fix-schema-v2.sh  fix-schema.sh  get-schema.sh  insert-markets-complete.sh  list-tables.sh  package-lock.json  package.json  playwright.config.ts  preview-env-localhost.txt  quick-preview.sh  setup-vercel-env.sh  test-api.sh  test-leaderboard-api.sh  test-live-site.sh  vercel.json  verify-comments.sh
programs/bond-manager/: Cargo.toml
programs/bond-manager/src/: lib.rs
programs/core-markets/: Cargo.toml
programs/core-markets/src/: lib.rs
programs/market-resolution/: Cargo.toml
programs/market-resolution/src/: lib.rs
programs/program-registry/: Cargo.toml
programs/program-registry/src/: lib.rs
programs/proposal-system/: Cargo.toml
programs/proposal-system/src/: lib.rs
scripts/: bmad-validate.sh  create-expiring-market.ts  create-markets-1-2.ts  (+14 more)
(+382 files in other folders)
