[workspace]
members = [
    "programs/program-registry",
    "programs/parameter-storage",
    "programs/core-markets",
    "programs/market-resolution",
    "programs/proposal-system",
    "programs/bond-manager",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
