[package]
name = "program-registry"
version = "0.1.0"
description = "BMAD-Zmart Program Registry - Central registry for dynamic program address lookup"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
